--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python==3.8
-tensorflow==2.14.0
-keras==2.14.0
-opencv-python==4.8.1
-numpy==1.24.3
-tqdm==4.65.0
+python
+tensorflow
+keras
+opencv-python
+numpy
+tqdm
