--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-tensorflow==2.14.0
-keras==2.14.0
-opencv-python==4.8.1
+tensorflow==2.13.0
+keras==2.13.1
+opencv-python==4.8.1.78
 numpy==1.24.3
-tqdm==4.65.0
+scikit-learn==1.3.1
+streamlit==1.32.2
+Pillow==10.0.0
 
